<resources>
    <string name="app_name">TrackMyMedia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="editing_name">Название</string>
    <string name="editing_name_hint">Введите название</string>
    <string name="editing_description">Описание</string>
    <string name="editing_description_hint">Введите описание</string>
    <string name="editing_rate">Оценка</string>
    <string name="dialog_button_text_cancel">Отмена</string>
    <string name="dialog_button_text_dont_rate">Не оценивать</string>
    <string name="dialog_button_text_done">Готово</string>
    <string name="dialog_title_rate">Оцените</string>
    <string name="dont_rate_text">Не оценивать</string>
    <string name="default_id">0</string>
    <string name="menu_sort">Сортировать</string>
    <string name="menu_sort_by_date_new_first">по дате: сначала новые</string>
    <string name="menu_sort_by_date_old_first">по дате: сначала старые</string>
    <string name="menu_sort_by_alphabet_A_Z">по алфавиту: А-Я</string>
    <string name="menu_sort_by_alphabet_Z_A">по алфавиту: Я-А</string>
    <string name="menu_sort_by_rating_good_first">по рейтингу: сначала хорошие</string>
    <string name="menu_sort_by_rating_bad_first">по рейтингу: сначала плохие</string>
    <string name="menu_edit_list">Редактировать список</string>
    <string name="seekbar_default_rating_text">5/10</string>
    <string name="menu_delete_title">Удалить</string>
</resources>