<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/app_margin_normal"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title_rate"
        style="@style/main_text"
        android:layout_marginTop="@dimen/app_margin_normal"
        app:layout_constraintTop_toTopOf="parent"/>

    <SeekBar
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/seek_bar"
        app:layout_constraintTop_toBottomOf="@id/text_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:max="10"
        android:layout_marginTop="@dimen/app_margin_normal"
        android:theme="@style/Widget.AppCompat.SeekBar.Discrete"
        android:progress="5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/app_margin_normal"
        android:layout_marginBottom="@dimen/app_margin_normal">

        <Button
            android:id="@+id/button_cancel"
            style="?attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/dialog_button_text_cancel"/>

        <Button
            android:id="@+id/button_dont_rate"
            style="?attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/dialog_button_text_dont_rate"/>

        <Button
            android:id="@+id/button_done"
            style="?attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/dialog_button_text_done"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>